<resources xmlns:tools="http://schemas.android.com/tools">


    <string name="lorem">Leila was born in Tehran/Shemrian. At age of 7, she had a chance to begin acting in film. However her family and she thought school was more important for her at the time than acting. She was introduced to stage acting at the age of 18. Leila’s film debut was "Black Eyes" by Iraj Ghaderi. Since then she has starred in many films and recently became the highest paying actress in Iran. She speaks Persian and Turkish fluently and plays tennis, enjoys horseback riding and many other sports.</string>

    <string name="simple_view_behavior">com.zoonref.viewbehavior.SimpleViewBehavior</string>
    <string name="animation_view_behavior">com.example.mizansen.CustomView.AnimationViewBehavior</string>


    <!--String App -->
    <string name="app_name">Mizansen</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="more">More</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="category">category</string>

    <!--String Menu -->
    <string name="theme">Dark Theme</string>
    <string name="language">Language</string>
    <string name="support">Support</string>
    <string name="introduction">introduce to friends</string>

    <string name="criticsSndSuggestions">critics and suggestions</string>
    <string name="FrequentlyAskedQuestions">Frequently Asked Questions</string>
    <string name="aboutUs">About Us</string>
    <string name="exit">Exit</string>


    <!--String Tab -->
    <string name="tab_text_1">Gallory Offline</string>
    <string name="tab_text_2">Views</string>
    <string name="tab_text_3">Wishlist</string>

    <!--String Message-->
    <string name="ErrorValidEmail">Enter the email correctly</string>
    <string name="ErrorValidPin">Enter the Pin carefully</string>
    <string name="worng_code">Code is wrong!</string>
    <string name="worng_email_register">Email already registered</string>
    <string name="worng_email_reset">Unregistered email</string>
    <string name="password_count">The minimum password is 6 characters</string>
    <string name="Same_password">The password is not the same</string>
    <string name="validation_firstnamelastname">You cannot use a number in a first and last name</string>
    <string name="error_host">Error registering information</string>
    <string name="sucsses_resetpass">Your password has been successfully changed.</string>
    <string name="resetpass_ok">New code sent</string>
    <string name="resetpass_worng">Error submitting new code</string>
    <string name="registered_ok">Your registration has been successful</string>
    <string name="ErrorValidInternet">Please check our connectivity.</string>

    <!--String LoginActivity -->
    <string name="Login">Login</string>
    <string name="email">Email</string>
    <string name="forgotpassword">Forgotpassword?</string>
    <string name="register_login">Do not have an account? Sign up now</string>
    <string name="register_login_bold">Sign up</string>

    <!--String SendMailActivity -->
    <string name="Get_code">Get Code</string>
    <string name="title_sendmail_reset_password">Enter your email to recover your password.</string>
    <string name="title_sendmail_register">Enter your email to sign up.</string>

    <!--String VerifyCodeActivity -->
    <string name="title_verificode">Enter code</string>
    <string name="ReSend">Send Code</string>
    <string name="getnewcode" translatable="false">Get the code again</string>
    <string name="Edit">Edit</string>

    <!--String RegisterActivity -->
    <string name="title_register">Complete the form below to register.</string>
    <string name="name">name</string>
    <string name="family">family</string>
    <string name="Register">Register</string>

    <!--String ResetPasswordActivity -->
    <string name="change_pass">change password</string>


    <!--String MainActivity -->
    <!--String profile menu -->
    <string name="_profile">profile</string>
    <string name="message">message</string>
    <string name="subscription">subscription</string>
    <string name="transaction">transaction</string>
    <string name="online_support">online support</string>
    <string name="phyisical_version">phyisical version</string>

    <!--String movie -->
    <string name="time">time</string>
    <string name="Director">Director</string>
    <string name="Production">production</string>
    <string name="Minutes">Minutes</string>
    <string name="synopsis">synopsis</string>
    <string name="agents">Agents</string>
    <string name="the_writer">the writer</string>
    <string name="cameraman">cameraman</string>
    <string name="producer">producer</string>
    <string name="actors">Actors</string>
    <string name="gallery">gallery</string>
    <string name="Similar_movie">Similar movie</string>
    <string name="Other_chapters">Other chapters</string>
    <string name="Season">Season</string>
    <string name="textComment">Please write your comment</string>
    <string name="send">Send</string>

    <!--String Profile-->
    <string name="profile1">profile</string>
    <string name="birthday">birthday</string>
    <string name="setting_pass">password Setting</string>
    <string name="setting_newpass">new password</string>
    <string name="setting_checkbox">Do all your devices sync with the new password?</string>
    <string name="setting_save">save</string>
    <string name="transaction_paypalaccount">Paypal account</string>
    <string name="transactionـLast_account_debit_date">Last account debit date</string>
    <string name="transaction_turnover">Turnover</string>
    <string name="message_messages">Messages</string>
    <string name="message_enterbirthday">please enter date birthday</string>


    <!--String Url Api-->
    <string name="API_Validation">https://mizanscene.com/wp-json/mobile/v1/profile/login/validate</string>
    <string name="API_Login">https://mizanscene.com/wp-json/mobile/v1/profile/login</string>
    <string name="API_SendEmailToRegister">https://mizanscene.com/wp-json/mobile/v1/profile/register</string>
    <string name="API_SendEmailToResetPass">https://mizanscene.com/wp-json/mobile/v1/profile/reset-password</string>
    <string name="API_VerifiCode">https://mizanscene.com/wp-json/mobile/v1/profile/verify-code</string>
    <string name="API_ReSendCode">https://mizanscene.com/wp-json/mobile/v1/profile/reset-code</string>
    <string name="API_Register">https://mizanscene.com/wp-json/mobile/v1/profile/register</string>
    <string name="API_ResetPassword">https://mizanscene.com/wp-json/mobile/v1/profile/reset-password</string>

    <string name="API_HomePage">https://mizanscene.com/wp-json/mobile/v1/mainpage/</string>
    <string name="API_Category">https://mizanscene.com/wp-json/mobile/v1/category</string>
    <string name="API_Movie">https://mizanscene.com/wp-json/mobile/v1/movies/</string>
    <string name="API_IP">https://ifconfig.me/all.json</string>
    <string name="API_KeyArvan">Apikey 8f91b792-6aa7-46c9-86db-dbbc25d2c4b8</string>
    <string name="API_ArvanDataMovie">https://napi.arvancloud.com/vod/2.0/videos/</string>



</resources>
