<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fragment_transaction_backpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_gravity="left"
        android:tint="@color/colorBgItemDark"
        android:src="@drawable/ic_back"/>

    <com.example.mizansen.CustomView.TextViewCustom
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/transaction_paypalaccount"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical|center_horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/paypal"/>

        <com.example.mizansen.CustomView.EditTextCustom
            android:id="@+id/fragment_transaction_paypal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="number"
            android:background="@drawable/bg_edittextprofile"
            android:layout_margin="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/transactionـLast_account_debit_date"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="05/25/2019"/>


    </LinearLayout>
    
    <com.example.mizansen.CustomView.TextViewCustom
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/transaction_turnover"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragmentpayment_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



</LinearLayout>