<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:layout_gravity="top|left"
        android:tint="@color/colorPrimaryDark"
        android:src="@drawable/ic_back"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="top|center_horizontal"
        android:src="@drawable/logo" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="50dp">


        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="325dp"
            android:elevation="8dp"
            app:cardBackgroundColor="@color/graylite"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignStart="@+id/cardView"
                android:layout_alignEnd="@+id/cardView"
                android:gravity="center_horizontal"
                android:layoutDirection="ltr"
                android:orientation="vertical"
                android:padding="20dp">


                <com.example.mizansen.CustomView.EditTextCustom
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_edittext"
                    android:padding="5dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textEmailAddress" />

                <com.example.mizansen.CustomView.EditTextCustom
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_edittext"
                    android:padding="5dp"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textEmailAddress" />

                <com.example.mizansen.CustomView.ButtonCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/backgrund_button_green"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="5dp"
                    android:text="@string/change_pass" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_gravity="bottom"
        android:scaleType="fitXY"
        android:src="@drawable/pirhan" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>