<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|bottom"
        android:layout_marginTop="50dp">


        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="420dp"
            android:elevation="8dp"
            app:cardBackgroundColor="@color/colorBgItem"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignStart="@+id/cardView"
                android:layout_alignEnd="@+id/cardView"
                android:gravity="center_horizontal"
                android:layoutDirection="ltr"
                android:orientation="vertical"
                android:padding="20dp">

                <com.example.mizansen.CustomView.LinearLayoutCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_edittext"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_key"
                        android:tint="@color/colorItem" />

                    <TextView
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorBgItem" />


                    <com.example.mizansen.CustomView.EditTextCustom
                        android:id="@+id/recoverypassword_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textEmailAddress"
                        android:padding="5dp"
                        android:textColor="@color/colorItem"
                        android:textColorHint="@color/colorItem"
                        android:textSize="@dimen/size_text_edittext" />

                </com.example.mizansen.CustomView.LinearLayoutCustom>

                <com.example.mizansen.CustomView.LinearLayoutCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/bg_edittext"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_key"
                    android:tint="@color/colorItem" />

                <TextView
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorBgItem" />

                <com.example.mizansen.CustomView.EditTextCustom
                    android:id="@+id/recoverypassword_confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:textColor="@color/colorItem"
                    android:textColorHint="@color/colorItem"
                    android:textSize="@dimen/size_text_edittext" />

                </com.example.mizansen.CustomView.LinearLayoutCustom>

                <com.example.mizansen.CustomView.ButtonCustom
                    android:id="@+id/recoverypassword_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/layout_height_buttom"
                    android:layout_margin="15dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/backgrund_button_green"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/change_pass"
                    android:textColor="@color/colorItem"
                    app:btn_bold_word="@string/change_pass" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_gravity="bottom"
        android:scaleType="fitXY"
        android:src="@drawable/ic_pirhan" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>